# FrameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json
.github/workflows/: build-and-test.yml
include/: Engine.hpp  Entity.hpp  Logger.hpp  Registry.hpp  Window.hpp
include/components/: LightComponent.hpp
include/math/: Matrix4.hpp  Quaternion.hpp  Vector3.hpp
include/objects/: Object.hpp  PointLight.hpp
include/physics/: PhysicsSystem.hpp
include/rendering/: Camera.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp
shaders/: basic_fragment.glsl  basic_vertex.glsl
src/: main.cpp
src/core/: Engine.cpp  Logger.cpp  Object.cpp  Window.cpp
src/math/: Quaternion.cpp
src/rendering/: Camera.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp
src/rendering/loaders/: OBJLoader.cpp
tests/unit/: test_ecs.cpp
